--- a/climate/research/oregon/interpolation/mosaicing_presentation_summary.Rmd
+++ b/climate/research/oregon/interpolation/mosaicing_presentation_summary.Rmd
@@ -1,8 +1,8 @@
 ---
-title       : Mosaicing test summary region 4,South America 
+title       : Mosaicing test summary region 2, Europe 
 subtitle    : Global assessment interpolation
 author      : Benoit Parmentier
-job         : NEX job reg4
+job         : NEX job reg2
 framework   : io2012        # {io2012, html5slides, shower, dzslides, ...}
 highlighter : highlight.js  # {highlight.js, prettify, highlight}
 hitheme     : tomorrow      # 
@@ -15,11 +15,12 @@ knit        : slidify::knit2slides
 
 #First let's set up the input parameters for the script in R:
 
-in_dir <- "/data/project/layers/commons/NEX_data/mosaicing_data_test/reg4/output_reg4_mosaic_run10_1500x4500_global_analyses_06212015"
+in_dir <- "/data/project/layers/commons/NEX_data/mosaicing_data_test/reg2/output_reg2_mosaic_run10_1500x4500_global_analyses_06212015"
 
-region_name <- "reg4" #PARAM 13 #reg4 South America, Africa reg5,Europe reg2, North America reg1, Asia reg3
+region_name <- "reg2" #PARAM 13 #reg4 South America, Africa reg5,Europe reg2, North America reg1, Asia reg3
 mosaicing_method <- c("unweighted","use_edge_weights")
 out_suffix <- paste(region_name,"_","mosaic_run10_1500x4500_global_analyses_06212015",sep="") 
+#_mosaic_run10_1500x4500_global_analyses_06212015
 day_to_mosaic <- c("20100831",
                    "20100901") #PARAM7
 
@@ -39,9 +40,9 @@ This was done for two dates:
 
 ---
 
-## Region 4
+## Region 2
 
-This presentation display mosaicing results for reg4: South America
+This presentation display mosaicing results for reg1: Europe
 
 This regions contains the following number of tiles:
 ```{r}
@@ -72,7 +73,9 @@ $(function() {
 ```{r, echo=FALSE}
 #image_file1 <- file.path(in_dir,"Figure2_mosaic_mean_unweighted_20100831_unweighted_20100831_20100831_reg6_mosaic_r#un10_1500x4500_global_analyses_06212015.png")
 
-image_file1 <- file.path(in_dir,paste("Figure2_mosaic_mean_unweighted_20100831_unweighted_20100831_20100831_",out_suffix,".png",sep=""))
+fname <- paste("Figure2_mosaic_mean_unweighted_20100831_unweighted_20100831_20100831_",out_suffix,".png",sep="")
+
+image_file1 <- file.path(in_dir,fname)
 
 ```
 
@@ -86,7 +89,12 @@ cat(md_str)
 # Edge weigted mean :20100831
 
 ```{r, echo=FALSE}
-image_file2 <- file.path(in_dir,"Figure2_mosaic_mean_use_edge_weights_20100831_use_edge_weights_20100831_20100831_reg4_mosaic_run10_1500x4500_global_analyses_06212015.png")
+#image_file2 <- file.path(in_dir,"Figure2_mosaic_mean_use_edge_weights_20100831_use_edge_weights_20100831_20100831_r#eg4_mosaic_run10_1500x4500_global_analyses_06212015.png")
+
+
+fname <- paste("Figure2_mosaic_mean_use_edge_weights_20100831_use_edge_weights_20100831_20100831_",out_suffix,".png",sep="")
+image_file2 <- file.path(in_dir,fname)
+
 ```
 
 ```{r image_file2, echo = F, results = 'asis'}
@@ -99,7 +107,11 @@ cat(md_str)
 # Unweighted mean : 20100901
 
 ```{r, echo=FALSE}
-image_file3 <- file.path(in_dir,"Figure2_mosaic_mean_unweighted_20100901_unweighted_20100901_20100901_reg4_mosaic_run10_1500x4500_global_analyses_06212015.png")
+image_file3 <- file.path(in_dir,"Figure2_mosaic_mean_unweighted_20100901_unweighted_20100901_20100901_reg2_mosaic_run10_1500x4500_global_analyses_06212015.png")
+
+#fname <- paste("Figure2_mosaic_mean_unweighted_20100901_unweighted_20100901_20100901_",out_suffix,".png",sep="")
+#image_file3 <- file.path(in_dir,fname)
+
 ```
 
 ```{r image_file3, echo = F, results = 'asis'}
@@ -112,7 +124,11 @@ cat(md_str)
 # Edge weigted mean : 20100901
 
 ```{r, echo=FALSE}
-image_file4 <- file.path(in_dir,"Figure2_mosaic_mean_use_edge_weights_20100901_use_edge_weights_20100901_20100901_reg4_mosaic_run10_1500x4500_global_analyses_06212015.png")
+#image_file4 <- file.path(in_dir,"Figure2_mosaic_mean_use_edge_weights_20100901_use_edge_weights_20100901_20100901_r#eg4_mosaic_run10_1500x4500_global_analyses_06212015.png")
+
+fname <- paste("Figure2_mosaic_mean_use_edge_weights_20100901_use_edge_weights_20100901_20100901_",out_suffix,".png",sep="")
+image_file4 <- file.path(in_dir,fname)
+
 ```
 
 ```{r image_file4, echo = F, results = 'asis'}
