--- a/climate/research/oregon/interpolation/mosaicing_presentation_summary.Rmd
+++ b/climate/research/oregon/interpolation/mosaicing_presentation_summary.Rmd
@@ -1,8 +1,8 @@
 ---
-title       : Mosaicing test summary region 5, Africa 
+title       : Mosaicing test summary region 23, Europe and Asia
 subtitle    : Global assessment interpolation
 author      : Benoit Parmentier
-job         : NEX job reg5
+job         : NEX job reg23
 framework   : io2012        # {io2012, html5slides, shower, dzslides, ...}
 highlighter : highlight.js  # {highlight.js, prettify, highlight}
 hitheme     : tomorrow      # 
@@ -15,11 +15,11 @@ knit        : slidify::knit2slides
 
 #First let's set up the input parameters for the script in R:
 
-in_dir <- "/data/project/layers/commons/NEX_data/mosaicing_data_test/reg5/output_reg5_mosaic_run10_1500x4500_global_analyses_06262015"
+in_dir <- "/data/project/layers/commons/NEX_data/mosaicing_data_test/reg23/output_reg23_mosaic_run10_1500x4500_global_analyses_06292015"
 
-region_name <- "reg5" #PARAM 13 #reg4 South America, Africa reg5,Europe reg2, North America reg1, Asia reg3
+region_name <- "reg23" #PARAM 13 #reg4 South America, Africa reg5,Europe reg2, North America reg1, Asia reg3
 mosaicing_method <- c("unweighted","use_edge_weights")
-out_suffix <- paste(region_name,"_","mosaic_run10_1500x4500_global_analyses_06262015",sep="") 
+out_suffix <- paste(region_name,"_","mosaic_run10_1500x4500_global_analyses_06292015",sep="") 
 #_mosaic_run10_1500x4500_global_analyses_06212015
 day_to_mosaic <- c("20100831",
                    "20100901") #PARAM7
@@ -40,9 +40,9 @@ This was done for two dates:
 
 ---
 
-## Region 5
+## Region 23
 
-This presentation display mosaicing results for reg5: Africa
+This presentation display mosaicing results for reg23: 
 
 This regions contains the following number of tiles:
 ```{r}
