--- a/climate/research/oregon/interpolation/mosaicing_presentation_summary.Rmd
+++ b/climate/research/oregon/interpolation/mosaicing_presentation_summary.Rmd
@@ -1,8 +1,8 @@
 ---
-title       : Mosaicing test summary region 23, Europe and Asia
+title       : Mosaicing test summary world mosaic
 subtitle    : Global assessment interpolation
 author      : Benoit Parmentier
-job         : NEX job reg23
+job         : NEX job world
 framework   : io2012        # {io2012, html5slides, shower, dzslides, ...}
 highlighter : highlight.js  # {highlight.js, prettify, highlight}
 hitheme     : tomorrow      # 
@@ -15,11 +15,11 @@ knit        : slidify::knit2slides
 
 #First let's set up the input parameters for the script in R:
 
-in_dir <- "/data/project/layers/commons/NEX_data/mosaicing_data_test/reg23/output_reg23_mosaic_run10_1500x4500_global_analyses_06292015"
+in_dir <- "/data/project/layers/commons/NEX_data/mosaicing_data_test/mosaic_world_07012015"
 
-region_name <- "reg23" #PARAM 13 #reg4 South America, Africa reg5,Europe reg2, North America reg1, Asia reg3
+region_name <- "world" #PARAM 13 #reg4 South America, Africa reg5,Europe reg2, North America reg1, Asia reg3
 mosaicing_method <- c("unweighted","use_edge_weights")
-out_suffix <- paste(region_name,"_","mosaic_run10_1500x4500_global_analyses_06292015",sep="") 
+out_suffix <- paste(region_name,"_","mosaic_07092015",sep="") 
 #_mosaic_run10_1500x4500_global_analyses_06212015
 day_to_mosaic <- c("20100831",
                    "20100901") #PARAM7
@@ -30,25 +30,16 @@ png_files <- mixedsort(list.files(path=in_dir,pattern=paste("*",out_suffix,".png
 
 ## Mosaicing with two methods
 
+All regions were merged together for the two mosaicing methods:
 
 1. Unweighted mean: each image a pixel has no specific weight
 2. distance from edge: weights of pixels depends on distance to edges for each tiles
 
-This was done for two dates:
+The world mosaic was produced for two dates:
 - 20100831
 - 20100901
 
 ---
-
-## Region 23
-
-This presentation display mosaicing results for reg23: 
-
-This regions contains the following number of tiles:
-```{r}
-pattern_str<- paste("*",mosaicing_method[2],"_m_",day_to_mosaic[1],"_",out_suffix,".tif",sep="")
-length(list.files(path=in_dir,pattern=pattern_str))
-```
 
 --- .class #id 
 
@@ -71,9 +62,9 @@ $(function() {
 # Unweighted mean reg: 20100831
 
 ```{r, echo=FALSE}
-#image_file1 <- file.path(in_dir,"Figure2_mosaic_mean_unweighted_20100831_unweighted_20100831_20100831_reg6_mosaic_r#un10_1500x4500_global_analyses_06212015.png")
+#image_file1 <- file.path(in_dir,"Figure9_clim_mosaics_day_test_unweighted_20100831_world_mosaic_07092015")
 
-fname <- paste("Figure2_mosaic_mean_unweighted_20100831_unweighted_20100831_20100831_",out_suffix,".png",sep="")
+fname <- paste("Figure9_clim_mosaics_day_test_unweighted_20100831_",out_suffix,".png",sep="")
 
 image_file1 <- file.path(in_dir,fname)
 
@@ -89,10 +80,10 @@ cat(md_str)
 # Edge weigted mean :20100831
 
 ```{r, echo=FALSE}
-#image_file2 <- file.path(in_dir,"Figure2_mosaic_mean_use_edge_weights_20100831_use_edge_weights_20100831_20100831_r#eg4_mosaic_run10_1500x4500_global_analyses_06212015.png")
+#image_file2 <- file.path(in_dir,"Figure9_clim_mosaics_day_test_edge_weighted_20100831_world_mosaic_07092015.png")
 
 
-fname <- paste("Figure2_mosaic_mean_use_edge_weights_20100831_use_edge_weights_20100831_20100831_",out_suffix,".png",sep="")
+fname <- paste("Figure9_clim_mosaics_day_test_edge_weighted_20100831_",out_suffix,".png",sep="")
 image_file2 <- file.path(in_dir,fname)
 
 ```
@@ -107,9 +98,9 @@ cat(md_str)
 # Unweighted mean : 20100901
 
 ```{r, echo=FALSE}
-#image_file3 <- file.path(in_dir,"Figure2_mosaic_mean_unweighted_20100901_unweighted_20100901_20100901_reg2_mosaic_r#un10_1500x4500_global_analyses_06212015.png")
+#image_file3 <- file.path(in_dir,"Figure9_clim_mosaics_day_test_unweighted_20100901_world_mosaic_07092015.png")
 
-fname <- paste("Figure2_mosaic_mean_unweighted_20100901_unweighted_20100901_20100901_",out_suffix,".png",sep="")
+fname <- paste("Figure9_clim_mosaics_day_test_unweighted_20100901_",out_suffix,".png",sep="")
 
 image_file3 <- file.path(in_dir,fname)
 
@@ -128,9 +119,9 @@ cat(md_str)
 # Edge weigted mean : 20100901
 
 ```{r, echo=FALSE}
-#image_file4 <- file.path(in_dir,"Figure2_mosaic_mean_use_edge_weights_20100901_use_edge_weights_20100901_20100901_r#eg4_mosaic_run10_1500x4500_global_analyses_06212015.png")
+#image_file4 <- file.path(in_dir,"Figure9_clim_mosaics_day_test_edge_weighted_20100901_world_mosaic_07092015.png")
 
-fname <- paste("Figure2_mosaic_mean_use_edge_weights_20100901_use_edge_weights_20100901_20100901_",out_suffix,".png",sep="")
+fname <- paste("Figure9_clim_mosaics_day_test_edge_weighted_20100901_",out_suffix,".png",sep="")
 image_file4 <- file.path(in_dir,fname)
 
 ```
@@ -141,163 +132,4 @@ cat(md_str)
 ```
 
 ---
-
-# Unweigted mean  slope: 20100831
-
-```{r, echo=FALSE}
-fname <- paste("Figure2_slope_mean_unweighted_20100831_unweighted_20100831_20100831_",out_suffix,".png",sep="")
-image_file5 <- file.path(in_dir,fname)
-```
-
-```{r image_file5, echo = F, results = 'asis'}
-#should make this a function!!!
-md_str <- paste('\n![](',image_file5,')\n',sep="") 
-cat(md_str)
-```
-
----
-
-# Edge weigted mean slope: 20100831
-
-```{r, echo=FALSE}
-#image_file6 <- file.path(in_dir,"Figure2_slope_mean_use_edge_weights_20100831_use_edge_weights_20100831_20100831_re#g4_mosaic_run10_1500x4500_global_analyses_06212015.png")
-fname <- paste("Figure2_slope_mean_use_edge_weights_20100831_use_edge_weights_20100831_20100831_",out_suffix,".png",sep="")
-image_file6 <- file.path(in_dir,fname)
-
-```
-
-```{r image_file6, echo = F, results = 'asis'}
-md_str <- paste('\n![](',image_file6,')\n',sep="") 
-cat(md_str)
-```
-
----
-
-# Unweigted mean slope: 20100901
-
-```{r, echo=FALSE}
-fname <- paste("Figure2_slope_mean_unweighted_20100901_unweighted_20100901_20100901_",out_suffix,".png",sep="")
-
-image_file7 <- file.path(in_dir,fname)
-
-```
-
-```{r image_file7, echo = F, results = 'asis'}
-md_str <- paste('\n![](',image_file7,')\n',sep="") 
-cat(md_str)
-```
-
----
-
-# Edge weigted mean slope: 20100901
-
-
-```{r, echo=FALSE}
-#fname <- paste("Figure2_slope_mean_use_edge_weights_20100901_use_edge_weights_20100901_20100901_",out_suffix,".png"#,sep="")
-#fname <- "Figure2_slope_mean_use_edge_weights_20100901_use_edge_weights_20100901_20100901_reg4_mosaic_run10_1500x45#00_global_analyses_06212015.png"
-fname <- paste("Figure2_slope_mean_use_edge_weights_20100901_use_edge_weights_20100901_20100901_",out_suffix,".png",sep="")
-image_file8 <- file.path(in_dir,fname)
-
-```
-
-```{r image_file8, echo = F, results = 'asis'}
-md_str <- paste('\n![](',image_file8,')\n',sep="") 
-cat(md_str)
-```
-
----
-
-# Unweigted mean aspect: 20100831
-
-```{r, echo=FALSE}
-
-fname <- paste("Figure2_aspect_mean_unweighted_20100831_unweighted_20100831_20100831_",out_suffix,".png",sep="")
-image_file9 <- file.path(in_dir,fname)
-
-```
-
-```{r image_file9, echo = F, results = 'asis'}
-md_str <- paste('\n![](',image_file9,')\n',sep="") 
-cat(md_str)
-```
-
----
-
-# Edge weigted mean aspect: 20100831
-
-```{r, echo=FALSE}
-#image_file10 <- file.path(in_dir,"Figure2_aspect_mean_use_edge_weights_20100831_use_edge_weights_20100831_20100831_#reg6_mosaic_run10_1500x4500_global_analyses_06212015.png")
-fname <- paste("Figure2_aspect_mean_use_edge_weights_20100831_use_edge_weights_20100831_20100831_",out_suffix,".png",sep="")
-image_file10 <- file.path(in_dir,fname)
-
-```
-
-```{r image_file10, echo = F, results = 'asis'}
-md_str <- paste('\n![](',image_file10,')\n',sep="") 
-cat(md_str)
-```
-
----
-
-# Unweigted mean aspect: 20100901
-
-```{r, echo=FALSE}
-#image_file11 <- file.path(in_dir,"Figure2_aspect_mean_unweighted_20100901_unweighted_20100901_20100901_reg6_mosaic_#run10_1500x4500_global_analyses_06212015.png")
-fname <- paste("Figure2_aspect_mean_unweighted_20100901_unweighted_20100901_20100901_",out_suffix,".png",sep="")
-image_file11 <- file.path(in_dir,fname)
-
-```
-
-```{r image_file11, echo = F, results = 'asis'}
-md_str <- paste('\n![](',image_file11,')\n',sep="") 
-cat(md_str)
-```
-
----
-
-# Edge weigted mean aspect: 20100901
-
-```{r, echo=FALSE}
-#image_file12 <- file.path(in_dir,"Figure2_aspect_mean_use_edge_weights_20100901_use_edge_weights_20100901_20100901_#reg6_mosaic_run10_1500x4500_global_analyses_06212015.png")
-fname <- paste("Figure2_aspect_mean_use_edge_weights_20100901_use_edge_weights_20100901_20100901_",out_suffix,".png",sep="")
-image_file12 <- file.path(in_dir,fname)
-```
-
-```{r image_file12, echo = F, results = 'asis'}
-md_str <- paste('\n![](',image_file12,')\n',sep="") 
-cat(md_str)
-```
-
----
-
-# Unweigted - edge weighted diff: 20100831
-
-```{r, echo=FALSE}
-#image_file13 <- file.path(in_dir,"Figure2_diff_raster_unweighted_use_edge_weights_20100831_reg6_mosaic_run10_1500x4#500_global_analyses_06212015.png")
-
-fname <- paste("Figure2_diff_raster_unweighted_use_edge_weights_20100831_",out_suffix,".png",sep="")
-image_file13 <- file.path(in_dir,fname)
-```
-
-```{r image_file13, echo = F, results = 'asis'}
-md_str <- paste('\n![](',image_file13,')\n',sep="") 
-cat(md_str)
-```
-
----
-
-# Unweigted - edge weighted diff : 20100901
-
-```{r, echo=FALSE}
-#image_file14 <- file.path(in_dir,"Figure2_diff_raster_unweighted_use_edge_weights_20100901_reg6_mosaic_run10_1500x4#500_global_analyses_06212015.png")
-
-fname <- paste("Figure2_diff_raster_unweighted_use_edge_weights_20100901_",out_suffix,".png",sep="")
-image_file14 <- file.path(in_dir,fname)
-
-```
-
-```{r image_file14, echo = F, results = 'asis'}
-md_str <- paste('\n![](',image_file14,')\n',sep="") 
-cat(md_str)
-```
 
